[package]
name = "muta-chain"
version = "0.1.0"
authors = [ "yejiayu <yejiayu.fe@gmail.com>" ]
edition = "2018"

[dependencies]
derive_more = "0.15"
runtime = "0.3.0-alpha.7"
runtime-tokio = "0.3.0-alpha.6"

  [dependencies.muta]
  git = "https://github.com/nervosnetwork/muta"
  branch = "master"

  [dependencies.protocol]
  git = "https://github.com/nervosnetwork/muta"
  branch = "master"
  package = "muta-protocol"

  [dependencies.asset]
  git = "https://github.com/nervosnetwork/muta"
  branch = "master"

  [dependencies.metadata]
  path = "services/metadata"

  [dependencies.hello]
  path = "services/hello"

  [dependencies.dex]
  path = "services/dex"

[workspace]
members = [ "services/metadata", "services/hello", "services/dex" ]
