[package]
name = "muta-tutorial-dex"
version = "0.1.0"
authors = [ "mkxbl <vincent@cryptape.com>" ]
edition = "2018"

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", rev = "417bfa85" }
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "417bfa85", package = "muta-protocol" }
metadata = { git = "https://github.com/nervosnetwork/muta", rev = "417bfa85" }

tokio = { version = "0.2", features = ["macros", "rt-core"]}
derive_more = "0.15"
runtime = "0.3.0-alpha.7"
runtime-tokio = "0.3.0-alpha.6"

asset = { path = "services/asset" }
dex = { path = "services/dex" }


[workspace]
members = [
  "services/dex",
  "services/asset"
]
