[package]
name = "dex"
version = "0.1.0"
authors = [ "yejiayu <yejiayu.fe@gmail.com>" ]
edition = "2018"

[dependencies]
serde_json = "1.0"
derive_more = "0.15"
byteorder = "1.3"

  [dependencies.binding-macro]
  git = "https://github.com/nervosnetwork/muta"
  branch = "master"

  [dependencies.protocol]
  git = "https://github.com/nervosnetwork/muta"
  branch = "master"
  package = "muta-protocol"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]
