[package]
name = "dex"
version = "0.1.0"
authors = [ "yes@no.com" ]
edition = "2018"

[dependencies]
binding-macro = { git = "https://github.com/mkxbl/muta.git",branch = "exec-bugfix"}
protocol = { git = "https://github.com/mkxbl/muta.git",branch = "exec-bugfix", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.15"
byteorder = "1.3"
rlp = "0.4"
bytes = "0.5"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/mkxbl/muta.git",branch = "exec-bugfix"}