[package]
name = "dex"
version = "0.1.0"
authors = [ "yes@no.com" ]
edition = "2018"

[dependencies]
binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "417bfa85", package = "binding-macro" }
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "417bfa85", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.15"
byteorder = "1.3"
rlp = "0.4"
bytes = "0.5"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/nervosnetwork/muta.git", rev = "417bfa85"}